# verdechain

./: .env.example  .eslintrc.js  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Plan.md  README.md  SECURITY.md  SUSTAINABILITY.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  sonar-project.properties  tsconfig.base.json  turbo.json
contracts/carbon_oracle/: Cargo.toml
contracts/carbon_oracle/src/: factors.rs  grid.rs  lib.rs  methods.rs  types.rs
contracts/carbon_oracle/test_snapshots/: test_batch_update_factors.1.json  test_batch_update_grid_intensities.1.json  test_batch_update_overwrites_previous.1.json  test_batch_update_with_negative_intensity_fails.1.json  test_full_oracle_lifecycle_flow.1.json  test_get_factor_value_returns_correct.1.json  test_get_factor_value_unknown_returns_zero.1.json  test_get_nonexistent_factor_fails.1.json  test_get_nonexistent_grid_intensity_returns_zero.1.json  test_lifecycle_falls_back_when_oracle_missing_factor.1.json  test_oracle_factors_affect_lifecycle_emissions.1.json  test_oracle_grid_intensity_affects_emissions.1.json  test_update_and_get_factor.1.json  test_update_and_get_grid_intensity.1.json  test_update_empty_activity_type_fails.1.json  test_update_negative_factor_value_fails.1.json  test_update_negative_grid_intensity_fails.1.json
contracts/carbon_oracle/tests/: test_factors.rs  test_grid.rs  test_lifecycle_integration.rs
contracts/greentag_cert/: Cargo.toml
contracts/greentag_cert/src/: lib.rs  templates.rs  (+2 more)
contracts/lifecycle_tracker/: Cargo.toml
(+283 files in other folders)
