[package]
name = "carbon_oracle"
version.workspace = true
edition.workspace = true

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
lifecycle_tracker = { path = "../lifecycle_tracker" }
