[package]
name = "greentag_cert"
version.workspace = true
edition.workspace = true

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
